--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  font-family: "Arial", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #fff;
 }
 
@@ -398,5 +398,132 @@ img {
   padding-right: 30px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.box {
+  width: 100%;
+  height: 100%;
+  background-image: url("../../img/form-bg.jpg");
+  background-size: 100% 200%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.box::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #000;
+  opacity: 0.6;
+}
+
+.box__form {
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -70%);
+          transform: translate(-50%, -70%);
+  padding: 50px;
+  border-radius: 10px;
+}
+
+.box__form::before {
+  content: "";
+  background: #fff;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -35%);
+          transform: translate(-50%, -35%);
+  width: 630px;
+  height: 690px;
+  z-index: -1;
+  border-radius: 20px;
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
+}
+
+.box__inp {
+  width: 100%;
+  padding: 10px 40px 10px 20px;
+  border-radius: 10px;
+  border: 5px solid #858484;
+  background-repeat: no-repeat;
+  background-size: 30px 30px;
+  background-position: right 5px center;
+}
+
+.box__inp::-webkit-input-placeholder {
+  font-size: 20px;
+  text-transform: capitalize;
+}
+
+.box__inp:-ms-input-placeholder {
+  font-size: 20px;
+  text-transform: capitalize;
+}
+
+.box__inp::-ms-input-placeholder {
+  font-size: 20px;
+  text-transform: capitalize;
+}
+
+.box__inp::placeholder {
+  font-size: 20px;
+  text-transform: capitalize;
+}
+
+.box__inp:focus {
+  outline: none;
+  border-color: #4400ff;
+}
+
+.box__valid {
+  color: red;
+  font-size: 25px;
+  opacity: 0;
+}
+
+.box .check-confirm {
+  position: absolute;
+  left: 50px;
+  width: 100%;
+}
+
+.box__btn {
+  width: 50%;
+  margin: 0 auto;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 30px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  background: #0059ff;
+  border: 1px solid transparent;
+  color: #fff;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.box__btn:hover {
+  color: #0059ff;
+  background: transparent;
+  border-color: #0059ff;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+label {
+  margin-bottom: 15px;
 }
 /*# sourceMappingURL=main.css.map */
